--- a/M04/ex03/Makefile
+++ b/M04/ex03/Makefile
@@ -1,50 +1,95 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: oezzaou <oezzaou@student.1337.ma>          +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/08/05 12:57:51 by oezzaou           #+#    #+#              #
-#    Updated: 2023/09/05 22:21:39 by oezzaou          ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
-################################################################################
-#                               VARIABLES:                                     #
-################################################################################
-NAME		:= main
-CPPFLAGS	:= -Wall -Wextra -Werror -std=c++98
-CC			:= c++
-OBJ_DIR		:= objs
-SRC			:= $(wildcard *.cpp)
-OBJ			:= $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(basename $(SRC))))
-RM			:= rm -rf
+#  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣦⣴⣶⣾⣿⣶⣶⣶⣶⣦⣤⣄⠀⠀⠀⠀⠀⠀⠀                                              
+#  ⠀⠀⠀⠀⠀⠀⠀⢠⡶⠻⠛⠟⠋⠉⠀⠈⠤⠴⠶⠶⢾⣿⣿⣿⣷⣦⠄⠀⠀⠀                𓐓  Makefile 𓐔           
+#  ⠀⠀⠀⠀⠀⢀⠔⠋⠀⠀⠤⠒⠒⢲⠀⠀⠀⢀⣠⣤⣤⣬⣽⣿⣿⣿⣷⣄⠀⠀                                              
+#  ⠀⠀⠀⣀⣎⢤⣶⣾⠅⠀⠀⢀⡤⠏⠀⠀⠀⠠⣄⣈⡙⠻⢿⣿⣿⣿⣿⣿⣦⠀      Dev: oezzaou <oussama.ezzaou@gmail.com> 
+#  ⢀⠔⠉⠀⠊⠿⠿⣿⠂⠠⠢⣤⠤⣤⣼⣿⣶⣶⣤⣝⣻⣷⣦⣍⡻⣿⣿⣿⣿⡀                                              
+#  ⢾⣾⣆⣤⣤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠉⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                              
+#  ⠀⠈⢋⢹⠋⠉⠙⢦⠀⠀⠀⠀⠀⠀⢀⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇       Created: 2023/08/05 12:57:51 by oezzaou
+#  ⠀⠀⠀⠑⠀⠀⠀⠈⡇⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇       Updated: 2025/02/26 07:42:05 by oezzaou
+#  ⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⢀⣾⣿⣿⠿⠟⠛⠋⠛⢿⣿⣿⠻⣿⣿⣿⣿⡿⠀                                              
+#  ⠀⠀⠀⠀⠀⠀⠀⢀⠇⠀⢠⣿⣟⣭⣤⣶⣦⣄⡀⠀⠀⠈⠻⠀⠘⣿⣿⣿⠇⠀                                              
+#  ⠀⠀⠀⠀⠀⠱⠤⠊⠀⢀⣿⡿⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀⠘⣿⠏⠀⠀                             𓆩♕𓆪      
+#  ⠀⠀⠀⠀⠀⡄⠀⠀⠀⠘⢧⡀⠀⠀⠸⣿⣿⣿⠟⠀⠀⠀⠀⠀⠀⠐⠋⠀⠀⠀                     𓄂 oussama ezzaou𓆃  
+#  ⠀⠀⠀⠀⠀⠘⠄⣀⡀⠸⠓⠀⠀⠀⠠⠟⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                                              
 
-################################################################################
-#                                RULES:                                        #
-################################################################################
-all: $(NAME)
+#====<[ CC compiler: ]>=========================================================
+CC						:= c++
+CPPFLAGS			:= -Wall -Wextra -Werror -std=c++98
+RM						:= rm -rf
+
+#====<[ Colors: ]>==============================================================
+GREEN					= \033[1;32m
+RED						= \033[1;31m
+BLUE					= \033[34m
+CYAN					= \033[1;36m
+GRAY					= \033[0;90m
+PURPLE				= \033[0;35m
+YELLOW				= \033[0;93m
+BLACK  				= \033[20m
+MAGENTA 			= \033[35m
+WHITE  				= \033[37m
+PINK					= \033[0;38;5;199m
+ORANGE 				= \033[38;5;214m
+LIGHT_BLACK  	= \033[90m
+LIGHT_RED    	= \033[91m
+LIGHT_GREEN  	= \033[92m
+LIGHT_YELLOW 	= \033[93m
+LIGHT_BLUE   	= \033[94m
+LIGHT_MAGENTA = \033[95m
+LIGHT_CYAN   	= \033[96m
+LIGHT_WHITE  	= \033[97m
+LIGHT_BLUE		= \033[38;5;45m
+RESET					= \033[1;0m
+
+#===<[ Sources: ]>==============================================================
+PROJECT				:= M04/ex03
+NAME					:= main
+OBJ_DIR				:= obj
+SRC						:= $(wildcard *.cpp)
+OBJ						:= $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(basename $(SRC))))
+
+#====<[ Rules: ]>===============================================================
+all: signature $(NAME)
 
 $(NAME): $(OBJ)
 	@$(CC) $(CPPFLAGS) $^ -o $@
+	@echo "${GREEN}[OK] ${CYAN}$(NAME) ✔️${RESET}"
 
 $(OBJ_DIR)/%.o: %.cpp | $(OBJ_DIR)
 	@$(CC) $(CPPFLAGS) -c $< -o $@
-	@printf "Compling... %-20s >>>> %s.\n" "$<" "$@"
+	@printf "$(GREEN)[OK]${RESET} ${PINK}Compiling${RESET} %-26s| $@\n" "$<"
+
+signature:
+	@printf "${GRAY}%19s${RESET}\n"	"𓆩♕𓆪"
+	@printf "${GRAY}%s${RESET}\n"		"𓄂 oussama ezzaou𓆃  "
 
 run:
-	./$(NAME)
+	./$(NAME) 
 
 $(OBJ_DIR):
 	@mkdir -p $@
 
 clean:
-	@${RM} $(OBJ_DIR)
+	@if [ -d $(OBJ_DIR) ]; then\
+		${RM} $(OBJ_DIR);\
+		printf "${GREEN}[OK]${RESET} ${ORANGE}Cleaning  %-26s${RESET}| ./%s\n"\
+					 "... " "$(PROJECT)/$(OBJ_DIR) ✔️";\
+	else\
+		printf "${RED}[KO]${RESET} ${BLUE}Not Found %-26s${RESET}| ./%s\n"\
+					 "..." "$(PROJECT)/$(OBJ_DIR) ✖️";\
+	fi
 
 fclean: clean
-	@${RM} $(NAME)
+	@if [ -f $(NAME) ]; then\
+		${RM} $(NAME);\
+		printf "${GREEN}[OK]${RESET} ${ORANGE}Cleaning  %-26s${RESET}| ./%s\n"\
+					 "... " "$(PROJECT)/$(NAME) ✔️";\
+	else\
+		printf "${RED}[KO]${RESET} ${BLUE}Not Found %-26s${RESET}| ./%s\n"\
+					 "..." "$(PROJECT)/$(NAME) ✖️";\
+	fi
 
 re: fclean all
 
-.PHONY: all run clean fclean re
-################################# (END) ########################################
+.PHONY: all run clean fclean re signature
+#===============================================================================
