--- a/M09/ex00/Makefile
+++ b/M09/ex00/Makefile
@@ -1,84 +1,118 @@
-#             ################                                                  
-#           ####################                                                
-#         ########################                                              
-#        #############+########### #                                            
-#        ######-..        .+########        < Makefile >                        
-#        ####-..            ..+####                                             
-#        ###-...             .-####                                             
-#        ###...              ..+##    Student: oezzaou <oezzaou@student.1337.ma>
-#         #-.++###.      -###+..##                                              
-#         #....  ...   .-.  ....##       Created: 2024/03/19 17:19:49 by oezzaou
-#      --.#.-#+## -..  -+ ##-#-.-...     Updated: 2024/03/23 18:08:19 by oezzaou
-#       ---....... ..  ........... -                                            
-#       -+#..     ..   .       .+-.                                             
-#        .--.     .     .     ..+.                                              
-#          -..    .+--.-.     ...                                               
-#          +.... .-+#.#+.    ..-                                                
-#           +...#####-++###-..-                                                 
-#           #---..----+--.---+##                                                
-#         ###-+--.... ....--+#####                                              
-#   ##########--#-.......-#-###########      Made By Oussama Ezzaou <OEZZAOU> :)
+#  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣦⣴⣶⣾⣿⣶⣶⣶⣶⣦⣤⣄⠀⠀⠀⠀⠀⠀⠀                                              
+#  ⠀⠀⠀⠀⠀⠀⠀⢠⡶⠻⠛⠟⠋⠉⠀⠈⠤⠴⠶⠶⢾⣿⣿⣿⣷⣦⠄⠀⠀⠀                𓐓  Makefile 𓐔           
+#  ⠀⠀⠀⠀⠀⢀⠔⠋⠀⠀⠤⠒⠒⢲⠀⠀⠀⢀⣠⣤⣤⣬⣽⣿⣿⣿⣷⣄⠀⠀                                              
+#  ⠀⠀⠀⣀⣎⢤⣶⣾⠅⠀⠀⢀⡤⠏⠀⠀⠀⠠⣄⣈⡙⠻⢿⣿⣿⣿⣿⣿⣦⠀      Dev: oezzaou <oussama.ezzaou@gmail.com> 
+#  ⢀⠔⠉⠀⠊⠿⠿⣿⠂⠠⠢⣤⠤⣤⣼⣿⣶⣶⣤⣝⣻⣷⣦⣍⡻⣿⣿⣿⣿⡀                                              
+#  ⢾⣾⣆⣤⣤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠉⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                              
+#  ⠀⠈⢋⢹⠋⠉⠙⢦⠀⠀⠀⠀⠀⠀⢀⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇       Created: 2024/03/19 17:19:49 by oezzaou
+#  ⠀⠀⠀⠑⠀⠀⠀⠈⡇⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇       Updated: 2025/02/27 14:58:34 by oezzaou
+#  ⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⢀⣾⣿⣿⠿⠟⠛⠋⠛⢿⣿⣿⠻⣿⣿⣿⣿⡿⠀                                              
+#  ⠀⠀⠀⠀⠀⠀⠀⢀⠇⠀⢠⣿⣟⣭⣤⣶⣦⣄⡀⠀⠀⠈⠻⠀⠘⣿⣿⣿⠇⠀                                              
+#  ⠀⠀⠀⠀⠀⠱⠤⠊⠀⢀⣿⡿⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀⠘⣿⠏⠀⠀                             𓆩♕𓆪      
+#  ⠀⠀⠀⠀⠀⡄⠀⠀⠀⠘⢧⡀⠀⠀⠸⣿⣿⣿⠟⠀⠀⠀⠀⠀⠀⠐⠋⠀⠀⠀                     𓄂 oussama ezzaou𓆃  
+#  ⠀⠀⠀⠀⠀⠘⠄⣀⡀⠸⠓⠀⠀⠀⠠⠟⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                                              
 
-#====< Variables >==============================================================
-NAME		:= btc
-CC			:= c++
-CPPFLAGS	:= -std=c++98 -Wall -Wextra -Werror
-OBJ_DIR		:= objs
-SRC_DIR		:= src
-INCLUDE		:= -Iinclude -Ilib/include
-SRC			:= $(wildcard *.cpp) $(wildcard */*.cpp) $(wildcard */*/*.cpp)
-OBJ			:= $(addprefix $(OBJ_DIR)/, $(addsuffix .o, $(notdir $(basename $(SRC)))))
-RM			:= rm -rf
+#====<[ CC compiler: ]>=========================================================
+CC					:= c++
+# CPPFLAGS		:= -Wall -Wextra -Werror -std=c++98
+RM					:= rm -rf
 
-#====< Colors >=================================================================
-RED			:= \033[0;31m
-GREEN		:= \033[0;32m
-BLUE		:= \033[0;34m
-YELLOW		:= \033[0;33m
-END			:= \033[0m
+#====< Sources >================================================================
+PROJECT			:= M09/ex00
+NAME				:= btc
+
+OBJ_DIR			:= obj
+SRC_DIR			:= src
+PARSER_LIB	:= parserLib
+INCLUDE			:= -Iinclude -I$(PARSER_LIB)/include
+
+SRC					:= $(wildcard *.cpp)\
+							 $(wildcard */*.cpp)\
+
+OBJ					:= $(patsubst %.cpp, $(OBJ_DIR)/%.o, $(notdir $(SRC)))
+
+#====<[ Colors: ]>==============================================================
+GREEN					= \033[1;32m
+RED						= \033[1;31m
+BLUE					= \033[34m
+CYAN					= \033[1;36m
+GRAY					= \033[0;90m
+PURPLE				= \033[0;35m
+YELLOW				= \033[0;93m
+BLACK  				= \033[20m
+MAGENTA 			= \033[35m
+WHITE  				= \033[37m
+PINK					= \033[0;38;5;199m
+ORANGE 				= \033[38;5;214m
+LIGHT_BLACK  	= \033[90m
+LIGHT_RED    	= \033[91m
+LIGHT_GREEN  	= \033[92m
+LIGHT_YELLOW 	= \033[93m
+LIGHT_BLUE   	= \033[94m
+LIGHT_MAGENTA = \033[95m
+LIGHT_CYAN   	= \033[96m
+LIGHT_WHITE  	= \033[97m
+LIGHT_BLUE		= \033[38;5;45m
+RESET					= \033[1;0m
 
 #====< Rules >==================================================================
-all: $(NAME)
+all: $(PARSER_LIB) $(NAME)
 
 $(NAME): $(OBJ)
-	@$(CC) $(CPPFLAGS) $^ -o $@
-	@test | awk '						\
-	BEGIN{								\
-		for (i=0; i < 50; i++){			\
-			printf("$(GREEN)▇$(END)");	\
-			system("sleep 0.01");		\
-		}								\
-		print("");						\
-	}'									
+	@$(CC) $(CPPFLAGS) -L$(PARSER_LIB) -lprs $^ -o $@
+	@test | awk '\
+		BEGIN {\
+		for (i=0; i < 70; i++){\
+			printf("$(GREEN)▇$(END)");\
+			system("sleep 0.01");\
+		}\
+	} END{printf "\n"}'
+	@echo "${GREEN}[OK] ${CYAN}$@ ✔️${RESET}"
 
-$(OBJ_DIR)/%.o: lib/src/%.cpp | $(OBJ_DIR)
-	@$(CC) $(CPPFLAGS) $(INCLUDE) -c $< -o $@
-	@printf "✅	Compiling... %5s\n" $<
+$(PARSER_LIB):
+	@make -s -C $@ static 
 
-$(OBJ_DIR)/%.o: src/%.cpp | $(OBJ_DIR)
+$(OBJ_DIR)/%.o: %.cpp | .create_dir
 	@$(CC) $(CPPFLAGS) $(INCLUDE) -c $< -o $@
-	@printf "✅	Compiling... %5s\n" $<
+	@printf "$(GREEN)[OK]${RESET} ${PINK}Compiling${RESET} %-33s| $@\n" "$<"
 
-$(OBJ_DIR)/%.o: %.cpp | $(OBJ_DIR)
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp | .create_dir 
 	@$(CC) $(CPPFLAGS) $(INCLUDE) -c $< -o $@
-	@printf "✅	Compiling... %5s\n" $<
+	@printf "$(GREEN)[OK]${RESET} ${PINK}Compiling${RESET} %-33s| $@\n" "$<"
 
 $(OBJ_DIR):
 	@mkdir -p $@
 
+# Run it with the following cmd: make run FILE=<file>
+run:
+	@./$(NAME) $(FILE)
+
 clean:
-	@${RM} $(OBJ_DIR)
-	@printf "✅	cleaning objs...\n"
+	@make -s -C $(PARSER_LIB) fclean
+	@if [ -d $(OBJ_DIR) ]; then\
+		${RM} $(OBJ_DIR);\
+		printf "${GREEN}[OK]${RESET} ${ORANGE}Cleaning  %-33s${RESET}| ./%s\n"\
+					 "... " "$(PROJECT)/$(OBJ_DIR) ✔️";\
+	else\
+		printf "${RED}[KO]${RESET} ${BLUE}Not Found %-33s${RESET}| ./%s\n"\
+					 "..." "$(PROJECT)/$(OBJ_DIR) ✖️";\
+	fi
 
 fclean: clean
-	@${RM} $(NAME)
-	@printf "✅	cleaning program...\n"
+	@if [ -f $(NAME) ]; then\
+		${RM} $(NAME);\
+		printf "${GREEN}[OK]${RESET} ${ORANGE}Cleaning  %-33s${RESET}| ./%s\n"\
+					 "... " "$(PROJECT)/$(NAME) ✔️";\
+	else\
+		printf "${RED}[KO]${RESET} ${BLUE}Not Found %-33s${RESET}| ./%s\n"\
+					 "..." "$(PROJECT)/$(NAME) ✖️";\
+	fi
 
 re: fclean all
 
-run:
-	@./$(NAME) test.csv
+.create_dir: $(OBJ_DIR)
 
-.SUFFIXES: .o .cpp .tpp
-.PHONY: all clean fclean re run
+.SUFFIXES: .o .cpp .tpp .a .so 
+
+.PHONY: all clean fclean re run $(PARSER_LIB)
 #===============================================================================
