--- a/M09/ex01/Makefile
+++ b/M09/ex01/Makefile
@@ -5,7 +5,7 @@
 #  ⢀⠔⠉⠀⠊⠿⠿⣿⠂⠠⠢⣤⠤⣤⣼⣿⣶⣶⣤⣝⣻⣷⣦⣍⡻⣿⣿⣿⣿⡀                                              
 #  ⢾⣾⣆⣤⣤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠉⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                              
 #  ⠀⠈⢋⢹⠋⠉⠙⢦⠀⠀⠀⠀⠀⠀⢀⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇       Created: 2024/03/31 20:12:22 by oezzaou
-#  ⠀⠀⠀⠑⠀⠀⠀⠈⡇⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇       Updated: 2025/02/27 15:17:09 by oezzaou
+#  ⠀⠀⠀⠑⠀⠀⠀⠈⡇⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇       Updated: 2025/03/02 09:47:10 by oezzaou
 #  ⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⢀⣾⣿⣿⠿⠟⠛⠋⠛⢿⣿⣿⠻⣿⣿⣿⣿⡿⠀                                              
 #  ⠀⠀⠀⠀⠀⠀⠀⢀⠇⠀⢠⣿⣟⣭⣤⣶⣦⣄⡀⠀⠀⠈⠻⠀⠘⣿⣿⣿⠇⠀                                              
 #  ⠀⠀⠀⠀⠀⠱⠤⠊⠀⢀⣿⡿⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀⠘⣿⠏⠀⠀                             𓆩♕𓆪      
@@ -13,23 +13,23 @@
 #  ⠀⠀⠀⠀⠀⠘⠄⣀⡀⠸⠓⠀⠀⠀⠠⠟⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                                              
 
 #====<[ CC compiler: ]>=========================================================
-CC					:= c++
-CPPFLAGS		:= -Wall -Wextra -Werror -std=c++98
-RM					:= rm -rf
+CC					  := c++
+CPPFLAGS		  := -Wall -Wextra -Werror -std=c++98
+RM					  := rm -rf
 
 #====< Sources >================================================================
-PROJECT			:= M09/ex01
-NAME				:= RPN
+PROJECT			  := M09/ex01
+NAME				  := RPN
 
-OBJ_DIR			:= obj
-SRC_DIR			:= src
-PARSER_LIB	:= parserLib
-INCLUDE			:= -Iinclude -I$(PARSER_LIB)/include
+OBJ_DIR			  := obj
+SRC_DIR			  := src
+PARSER_LIB	  := libprs
+INCLUDE			  := -Iinclude -I$(PARSER_LIB)/include
 
-SRC					:= $(wildcard *.cpp)\
-							 $(wildcard */*.cpp)\
+SRC					  := $(wildcard *.cpp)\
+                 $(wildcard */*.cpp)\
 
-OBJ					:= $(patsubst %.cpp, $(OBJ_DIR)/%.o, $(notdir $(SRC)))
+OBJ					  := $(patsubst %.cpp, $(OBJ_DIR)/%.o, $(notdir $(SRC)))
 
 #====<[ Colors: ]>==============================================================
 GREEN					= \033[1;32m
@@ -83,7 +83,6 @@ $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp | .create_dir
 $(OBJ_DIR):
 	@mkdir -p $@
 
-# Run it with the following cmd: make run FILE=<file>
 run:
 	./$(NAME) "2 3 +"
 
